force-app/main/default/objects/KimbleOne__WorkItemTemplate__c/KimbleOne__WorkItemTemplate__c.object-meta.xml
<CustomObject>
    <label>Work Item Template</label>
    <nameField>
        <label>Work Item Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Item Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>