force-app/main/default/objects/KimbleOne__WorkItemTemplate__c/fields/KimbleOne__Product__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Product__c</fullName>
    <label>Product</label>
    <referenceTo>KimbleOne__Product__c</referenceTo>
    <relationshipLabel>Work Item Templates</relationshipLabel>
    <relationshipName>WorkItemTemplates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>