force-app/main/default/objects/KimbleOne__WorkItemTemplate__c/fields/KimbleOne__Units__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Units__c</fullName>
    <label>Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>